fix favicon final

--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,4 +1,5 @@
-<link rel="shortcut icon" type="image/png" href="assets/img/favicons/favicon.ico?">
+
+<link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/tylerslnd/parentitexts/main/favicon.png">
 
 {% comment %}
   Placeholder to allow defining custom head, in principle, you can add anything here, e.g. favicons:
