--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,4 +1,6 @@
 <ul class="social-media-list">
+<center>GitHub: <a href ="https://github.com/parentitexts/parentitexts.github.io">https://github.com/parentitexts/parentitexts.github.io</a><br>
+Email: parentitexts@protonmail.com</center>
 {%- for entry in site.minima.social_links -%}
   {%- include social-item.html item = entry -%}
 {%- endfor -%}
